[gd_scene load_steps=58 format=3 uid="uid://bp6j6s6bfk8om"]

[ext_resource type="Texture2D" uid="uid://cqfx5tokeokw2" path="res://art/DarkSamurai.png" id="1_o415v"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="1_u7pug"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="2_qb2dy"]
[ext_resource type="PackedScene" uid="uid://chv84g0poip7n" path="res://scenes/HealthBarComponent.tscn" id="3_1be66"]
[ext_resource type="Script" path="res://scripts/HitboxComponent.gd" id="4_x6ol7"]
[ext_resource type="Script" path="res://scripts/DamageAreaComponent.gd" id="6_rup6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejcah"]
size = Vector2(18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_w260t"]
atlas = ExtResource("1_o415v")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s0nn"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpwrj"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifqmy"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhrxx"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ge1"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrr3m"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kin7p"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cef8w"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx1ld"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmxog"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki8rk"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7u2y"]
atlas = ExtResource("1_o415v")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3j3u"]
atlas = ExtResource("1_o415v")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdabo"]
atlas = ExtResource("1_o415v")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oykhk"]
atlas = ExtResource("1_o415v")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3qun"]
atlas = ExtResource("1_o415v")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d300j"]
atlas = ExtResource("1_o415v")
region = Rect2(576, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7sha"]
atlas = ExtResource("1_o415v")
region = Rect2(640, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuuub"]
atlas = ExtResource("1_o415v")
region = Rect2(704, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgi1g"]
atlas = ExtResource("1_o415v")
region = Rect2(768, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgbjm"]
atlas = ExtResource("1_o415v")
region = Rect2(832, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg56h"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3dym"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxkah"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygc3m"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbdbo"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb5il"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga7hj"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2ip5"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pilyc"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2stv"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6wm8"]
atlas = ExtResource("1_o415v")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bjdn"]
atlas = ExtResource("1_o415v")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo75e"]
atlas = ExtResource("1_o415v")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktcso"]
atlas = ExtResource("1_o415v")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsmmf"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq0j6"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14k1a"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bntng"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2cmc"]
atlas = ExtResource("1_o415v")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qsy1"]
atlas = ExtResource("1_o415v")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irp7c"]
atlas = ExtResource("1_o415v")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5xj3"]
atlas = ExtResource("1_o415v")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32wfh"]
atlas = ExtResource("1_o415v")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1lfx"]
atlas = ExtResource("1_o415v")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_noa8v"]
atlas = ExtResource("1_o415v")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emjy4"]
atlas = ExtResource("1_o415v")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nsmb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w260t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s0nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpwrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifqmy")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhrxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ge1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrr3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kin7p")
}],
"loop": false,
"name": &"attack_rotate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cef8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx1ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmxog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki8rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7u2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3j3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdabo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oykhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3qun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d300j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7sha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuuub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgi1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgbjm")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg56h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3dym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxkah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygc3m")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_tbdbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb5il")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga7hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2ip5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pilyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2stv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6wm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bjdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo75e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktcso")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsmmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq0j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14k1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bntng")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2cmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qsy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irp7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5xj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32wfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1lfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noa8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emjy4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_meumw"]
size = Vector2(45, 47)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_u7pug")

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_speed = 7.0
rotation_smoothing_speed = 7.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Health" type="Node2D" parent="."]
script = ExtResource("2_qb2dy")

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_1be66")]
offset_left = -29.0
offset_top = -64.0
offset_right = 29.0
offset_bottom = -37.0
health_component = NodePath("../Health")

[node name="WorldCollision" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ejcah")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("4_x6ol7")
health_component = NodePath("../Health")

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ejcah")
disabled = true

[node name="Flipable" type="Marker2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="Flipable"]
texture_filter = 1
position = Vector2(-1, -5)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3nsmb")
animation = &"idle"

[node name="DamageArea" type="Area2D" parent="Flipable"]
input_pickable = false
script = ExtResource("6_rup6q")

[node name="Collision" type="CollisionShape2D" parent="Flipable/DamageArea"]
position = Vector2(40.5, 0.5)
shape = SubResource("RectangleShape2D_meumw")
disabled = true

[connection signal="damaged" from="Health" to="." method="_on_health_damaged"]
[connection signal="killed" from="Health" to="." method="_on_health_killed"]
[connection signal="animation_changed" from="Flipable/Sprite" to="." method="_on_sprite_animation_changed"]
[connection signal="animation_finished" from="Flipable/Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Flipable/DamageArea" to="." method="_on_damage_area_area_entered"]
